<resources>
    <string name="app_name">Palestra</string>
    <string name="profilePictureDesc">Button will bring up image selector</string>
    <string name="profileAboutMe">About me&#8230;</string>
    <string name="benchDesc">Click here to track bench press information</string>
    <string name="squatDesc">Click here to track squat information</string>
    <string name="deadDesc">Click here to track dead lift information</string>
    <string name="searchFriends">Search&#8230;</string>
    <string name="aboutMe">About me&#8230;</string>
    <string name="Return">Return</string>
    <string name="trackWorkout">Track Workout&#8230;</string>
    <string name="loginTitle">Palestra Login</string>
    <string name="registerTitle">Welcome to Palestra</string>
    <string name="register_account">Register Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_palestra">Welcome to Palestra</string>
    <string name="select">Select&#8230;</string>
    <string name="timestamp">Timestamp: </string>
    <string name="stat_list">Stat list:</string>
</resources>