<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272928"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:id="@+id/profilePictureButton"
        android:contentDescription="@string/profilePictureDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_image_foreground"
        android:background="@drawable/circle_picture_button"
        android:scaleX=".80"
        android:scaleY=".80"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-260dp" />

    <TextView
        android:id="@+id/aboutMeText"
        android:layout_width="270dp"
        android:layout_height="200dp"
        android:hint="@string/profileAboutMe"
        android:textColor="@color/white"
        android:text="@string/aboutMe"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profilePictureButton"
        android:maxLength="256"
        />


</androidx.constraintlayout.widget.ConstraintLayout>