<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#272928">

    <ImageButton
        android:id="@+id/benchPressIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_picture_button"
        android:src="@drawable/benchpress_transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/squatIcon"
        android:contentDescription="@string/benchDesc"/>

    <ImageButton
        android:id="@+id/squatIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_picture_button"
        android:src="@drawable/squat_transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/benchPressIcon"
        app:layout_constraintRight_toLeftOf="@id/deadliftIcon"
        android:contentDescription="@string/squatDesc"/>

    <ImageButton
        android:id="@+id/deadliftIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_picture_button"
        android:src="@drawable/deadlift_transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/squatIcon"
        android:contentDescription="@string/deadDesc"/>


</androidx.constraintlayout.widget.ConstraintLayout>